@@ -32,6 +32,7 @@ const {
     checkRequestMessage,
     checkResponseMessage,
     genHMAC,
+    globalLoadCache,
 } = SpecTools;
 
 /**
@@ -128,7 +129,7 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
                 'options.masterAuth is not instance of MasterAuth' );
         }
 
-        SpecTools.loadIface( as, info, options.specDirs, this._load_cache );
+        SpecTools.loadIface( as, info, options.specDirs, globalLoadCache() );
 
         as.add( ( as ) => {
             info.coder = MessageCoder.get(
