@@ -134,7 +134,6 @@ class SimpleCCMImpl {
 
         this._globalHTTPSecureAgent = null;
         this._globalHTTPAgent = null;
-        this._load_cache = {};
 
         Object.seal( this );
     }
