@@ -12,7 +12,7 @@
     },
     "best": {
         "total": 4.979741297001085,
-        "count": 642984,
+        "count": 650022,
         "avg": 0.000007767019746996976,
         "avg_hz": 128749.51172702218,
         "min": 0.000004541,
