@@ -12,7 +12,7 @@
     },
     "best": {
         "total": 4.18024040399951,
-        "count": 664258,
+        "count": 679744,
         "avg": 0.0000074124761252250265,
         "avg_hz": 134907.6857862584,
         "min": 0.000004541,
