@@ -11,7 +11,7 @@
         "bench_time": 5.220624438
     },
     "best": {
-        "total": 4.5379208739999966,
+        "total": 4.027664100000004,
         "count": 17786,
         "avg": 0.00029331473444444415,
         "avg_hz": 3409.3070772392684,
@@ -19,6 +19,6 @@
         "min_hz": 4854.062607699514,
         "max": 0.005095731,
         "max_hz": 196.24269805450876,
-        "bench_time": 4.82405997
+        "bench_time": 4.236173086
     }
 }
