@@ -11,14 +11,14 @@
         "bench_time": 5.15065563
     },
     "best": {
-        "total": 4.641136865000029,
+        "total": 4.185253067999983,
         "count": 43381,
         "avg": 0.00011526634202272354,
         "avg_hz": 8675.559425689597,
-        "min": 0.000075085,
-        "min_hz": 13318.239328760737,
+        "min": 0.000074294,
+        "min_hz": 13460.037149702532,
         "max": 0.015283296,
         "max_hz": 65.43091228488933,
-        "bench_time": 5.15065563
+        "bench_time": 4.74166159
     }
 }
