@@ -1,4 +1,8 @@
 
+=== (next) ===
+CHANGED: all CCM instances to use global load cache
+NEW: SpecTools.globalLoadCache() feature
+
 === 2.0.0 (2018-06-12) ===
 CHANGED: minor performance and security improvements to use sealed and frozen objects.
 CHANGED: large refactoring of unit tests to be more clean and use AsyncSteps.testcase
